# IV_Forecast

./: .gitignore  AGENTS.md  PLAN.md  README.md  deep-research-report.md  implementation_spec.md  new_PLAN.md  pyproject.toml
configs/: local.example.yaml
configs/experiments/: spx_1d.yaml  spx_full_available_2004_2021q2.yaml  spx_public_2012plus.yaml  spx_smoke.yaml
configs/models/: lstm.yaml  lstm_smoke.yaml  reconstructor.yaml  reconstructor_smoke.yaml  xgboost.yaml  xgboost_smoke.yaml
docs/: artifact_contracts.md  literature_positioning.md  methodology.md  vendor_dataset_contract.md
src/ivs_forecast/: __init__.py  cli.py  config.py  logging_utils.py
src/ivs_forecast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ivs_forecast/artifacts/: bundles.py  hashing.py  manifests.py
src/ivs_forecast/data/: __init__.py  clean.py  collapse_nodes.py  dfw.py  discovery.py  early_closes.py  ingest.py  parity_forward.py  partitioned.py  sampled_surface.py  schema.py  ssvi.py  time_to_settlement.py
src/ivs_forecast/evaluation/: arbitrage.py  dm.py  hedged_pnl.py  mcs.py  metrics.py  pricing_mark.py  straddle_signal.py
src/ivs_forecast/features/: dataset.py  scalars.py  windows.py
src/ivs_forecast/models/: base.py  (+8 more)
tests/fixtures/: synthetic_vendor.py
tests/integration/: test_cli_pipeline.py  test_direct_ssvi_pipeline.py
tests/unit/: test_artifacts_and_mcs.py  test_data_pipeline.py  test_data_quality_reporting.py  test_docs.py  test_features_and_stats.py  test_partitioned_data.py  test_run_report.py  test_ssvi_surface.py
(+7 files in other folders)
